--- a/stylesheets/common/base.css
+++ b/stylesheets/common/base.css
@@ -1,1 +1,16 @@
-/* Base 스타일 작성 */
+* {
+    box-sizing: border-box;
+    font-size: 16px;
+	font-weight: normal;
+    font-family: 'Noto Sans KR', sans-serif;
+    margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
